# simd-structts

./: .pre-commit-config.yaml  .secrets.baseline  .travis.yml  CHANGELOG.md  LICENSE  README.md  build.txt  environment.yml  pyproject.toml  setup.py  tox.ini
src/old/: simdkalman_test.py
src/old/simdkalman/: model.py
src/simd_structts/: test_utils.py
src/simd_structts/backends/: base.py  statsmodels.py
src/simd_structts/backends/py_ssm/: filter.py  model.py  model_definition.py  results.py  smoother.py
src/simd_structts/backends/simd/: kalman.py  model.py  results.py
src/simd_structts/backends/simdkalman/: kalman_filter.py  model.py
src/simd_structts/backends/statsmodels/: model.py  results.py
src/simd_structts/base/: model.py  results.py
tests/: approx_diffuse_test.py  conftest.py  exog_test.py  fixed_init_test.py  py_ssm.py  py_ssm_backend_test.py  py_ssm_test.py  py_ssm_test_2.py  simd_backend_test.py  utils.py
tests/backends/: py_ssm_test.py  simd_fixed_init_test.py  simd_test.py
