[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.poetry]
name = "simd_structts"
version = "0.1.1"
description = "SIMD implementation of the StructTS/Unobserved Components model"
authors = ["Vladimir Shulyak"]

[tool.poetry.dependencies]
python = "3.*"
statsmodels = "^0.11.1"
simdkalman = "1.0.1"

[tool.poetry.dev-dependencies]
pre-commit = "*"
autoflake = "*"
reorder-python-imports = "*"
black = "19.10b0"
pytest = "^5.4.3"
coverage = {extras = ["toml"], version = "^5.1"}
pytest-cov = "^2.10.0"
pytest-mock = "^3.1.1"
twine = "^3.2.0"
requests = "*"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["simd_structts"]

[tool.coverage.report]
show_missing = true
fail_under = 10
exclude_lines = ["pragma: no cover"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
